# LearnOpenGL

./: CMakeLists.txt  LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  README.md
include/glad/: glad.h
src/: createwindow.cpp  glad.c
src/shader/: shader.cpp
src/triangle/: triangle.cpp
